--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="262">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="289">
 
     
 
@@ -72,7 +72,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/e">web maker software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
