--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="628">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="726">
 
     
 
@@ -63,16 +63,15 @@
                 </li>
             </ul>
             <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="index.html#form1-4"><span class="mbri-cust-feedback mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 211, 103);"></span>
-                    Contact Us Now!
-                </a>
+                <a class="btn btn-sm btn-success display-4" href="index.html#form1-4"><span class="mbri-key mbr-iconfont mbr-iconfont-btn" style="color: rgb(28, 54, 131);"></span>LOGIN</a> <a class="btn btn-sm btn-primary display-4" href="index.html#form1-4"><span class="mbri-login mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 211, 103);"></span>
+                    SIGNUP</a>
             </div>
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
