--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="726">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="824">
 
     
 
@@ -71,7 +71,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
