--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="922">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="1022">
 
     
 
@@ -59,8 +59,8 @@
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mbri-update mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 211, 103);"></span>
                         
-                        Exchange &nbsp; &nbsp; &nbsp;&nbsp;</a>
-                </li>
+                        Exchange&nbsp;</a>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="#top"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 211, 103);"></span>&nbsp;Learning Center</a></li>
             </ul>
             <div class="navbar-buttons mbr-section-btn">
                 <a class="btn btn-sm btn-success display-4" href="index.html#form1-4"><span class="mbri-key mbr-iconfont mbr-iconfont-btn" style="color: rgb(28, 54, 131);"></span>LOGIN</a> <a class="btn btn-sm btn-primary display-4" href="index.html#form1-4"><span class="mbri-login mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 211, 103);"></span>
@@ -71,7 +71,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
