--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="1022">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="1266">
 
     
 
@@ -70,13 +70,44 @@
     </nav>
 </section>
 
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="header6 cid-qrovSsqvZ0 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=XMZcjdK4Vuk" id="header6-l" data-rv-view="1268">
 
-  <section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    
+
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(28, 54, 131);">
+    </div>
+
+    <div class="container">
+        <div class="media-container-column mbr-white col-md-10 offset-md-1">
+            <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
+                INTRO WITH BACKGROUND VIDEO
+            </h1>
+            <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
+                Intro with background video and color overlay. Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface.
+            </p>
+            <div class="mbr-section-btn align-center">
+                    <a class="btn btn-md btn-primary display-4" href="https://mobirise.com">LEARN MORE</a>
+                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+        <a href="#next">
+            <i class="mbri-down mbr-iconfont"></i>
+        </a>
+    </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/jquery-mb-vimeo_player/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
