--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="1369">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="1474">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="header6 cid-qrovSsqvZ0 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=XMZcjdK4Vuk" id="header6-l" data-rv-view="1371">
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="header6 cid-qrovSsqvZ0 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=XMZcjdK4Vuk" id="header6-l" data-rv-view="1476">
 
     
 
