create github pages

--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="1680">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="1914">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="header6 cid-qrovSsqvZ0 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=XMZcjdK4Vuk" id="header6-l" data-rv-view="1682">
+<section class="engine"><a href="https://mobirise.co/g">create a website</a></section><section class="header6 cid-qrovSsqvZ0 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=XMZcjdK4Vuk" id="header6-l" data-rv-view="1916">
 
     
 
