create github pages

--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="194">
+<section class="menu cid-qriPNArzHw" once="menu" id="menu1-6" data-rv-view="297">
 
     
 
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="header6 cid-qrovSsqvZ0 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=XMZcjdK4Vuk" id="header6-l" data-rv-view="196">
+<section class="engine"><a href="https://mobirise.co/j">design a website for free</a></section><section class="header6 cid-qrovSsqvZ0 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=XMZcjdK4Vuk" id="header6-l" data-rv-view="299">
 
     
 
