create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
 
     
 
@@ -117,7 +117,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page5.html"><img src="assets/images/mbr-398x265.jpg" alt="Mobirise" title=""></a>
+                        <a href="page5.html"><img src="assets/images/mbr-1320x880.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><a href="3dec18.html" class="text-success" style="font-weight: bold;">Monday&nbsp;December 3rd</a><br></h4>
@@ -156,7 +156,7 @@
         <div class="media-container-column col-lg-8 offset-lg-2" data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for contacting us!</div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5bg/TXoDcJDJaSDfeNRU5B9P2QwMCfx0uxxKhXdQTagFi/bcGZAbIR1nUTw2e7RMYD7wYWnljOLNjEcXJQAasCCBxaB6RXLIf1yGKdylkR3ozVsCJn9QD6gkWKHjTZvs">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nk77oJh6TK4mvIY0lr0re9WwS9Xaz7ynpuVDdbV5I7iTWfez9gsPk2oDCXA45ITNq+gUFxRsKJdDM7CYM+jUCNZD2kY4bbZtvn4jJS4P4FKsxWsDndxXaOG3UgYJkLsE">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
