--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
 
     
 
@@ -117,7 +117,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page5.html"><img src="assets/images/mbr-1320x880.jpg" alt="Mobirise" title=""></a>
+                        <a href="3dec18.html"><img src="assets/images/mbr-1320x880.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><a href="3dec18.html" class="text-success" style="font-weight: bold;">Monday&nbsp;December 3rd</a><br></h4>
@@ -156,7 +156,7 @@
         <div class="media-container-column col-lg-8 offset-lg-2" data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for contacting us!</div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3evANhiMZzrrSvPaNMOO7k+kNz0idQR1dMNjTYgBtvdoG+Zlm08l28nD1TTv8mPhRHmv3hrHTAVK2el7Cn15y7o9qsN6t2wSPGTcpDaN36nOg9GHutpcoRW+dP4spfqg">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ph6AFbBtheg0PG8eWejdA4e3J1k/RhWni9iFWp8+t10Z5RKHaU9EblmK4avet15wbD8M77sgKovEDztm1se7lMl8AJJvWm8Rxo6qurk2DlF7UcPRSVlb6qxmV7PzK6u4">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
