--- a/why-invest-in-omisego.html
+++ b/why-invest-in-omisego.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section once="" class="cid-qroapysk5Z" id="footer6-q">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="" class="cid-qroapysk5Z" id="footer6-q">
 
     
 
