--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
 
     
 
@@ -78,7 +78,7 @@
     <div class="container align-center">
         <div class="media-container-column mbr-white col-md-10 offset-md-1">
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                <br>CryptoEase, &nbsp;<span style="font-weight: normal;">The CryptoCurrency Lowdown</span></h1>
+                <br>CryptoEase <span style="font-weight: normal;">The CryptoCurrency Lowdown</span></h1>
             
             <p class="mbr-text pb-3 mbr-fonts-style display-5">A Daily Outline of All the Latest News from Bitcoin and Cryptocurrencies</p>
             <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="3dec18.html">TODAY STORIES</a> 
@@ -156,7 +156,7 @@
         <div class="media-container-column col-lg-8 offset-lg-2" data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for contacting us!</div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZwguAwYSJU/OSaoHUhVflW2NdqjBZx8xtRdqGog2NRTnYW+u3kjwxTWwGSc7jSsIZB5XcJAqWKniybt2COK9Wf3vefH41HAgxHA6homECuTczDbezROmCIrk2sKCzJYu">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WhaNE+/XNuruCewk4AAloeJ64j5u5drBsPRF5eMPvv1YU/zhigIWpCMVM8D1GvVc0SJdYCpk1P1z9rqppTiVA26RBS+Lq5B5Gp/17Czh3kBWPhhkXV9BPXJXMiJy6H6Y">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
