--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
 
     
 
@@ -81,7 +81,7 @@
                 <br>CryptoEase <span style="font-weight: normal;">The CryptoCurrency Lowdown</span></h1>
             
             <p class="mbr-text pb-3 mbr-fonts-style display-5">A Daily Outline of All the Latest News from Bitcoin and Cryptocurrencies</p>
-            <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="3dec18.html">TODAY STORIES</a> 
+            <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="page6.html">TODAY STORIES</a> 
                 <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">NEWS ARCHIVE</a></div>
         </div>
     </div>
@@ -166,7 +166,7 @@
         <div class="media-container-column col-lg-8 offset-lg-2" data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for contacting us!</div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GQNYX3jRHeF4o+uIucJrxZQXGzfGipQHoPbojLmlT6M3NMj3LtR0AgIEKtE549bJSMbW7y6MgAFe+LxHOEV6GHrDrwk9X7OlepDGF1Xy2Go2Rins7gWYp+rCTitl3QTH">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iEZFCm6BYY8nNT50NF9eUSLHWgtXiAoZpPQr4iJQt3a7gJqqkkFbAw5kXx5UPsyZBltXBwyh9MKYU9KdZLjfbXTMZtTA7wEBNZz705JNkP2NaRSW4ZXFDZ5r89ud5kpK">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
