create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
 
     
 
@@ -177,7 +177,7 @@
         <div class="media-container-column col-lg-8 offset-lg-2" data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for contacting us!</div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TaQfJR6WCmTSf9ywrH0J/eMuIzZLsVQdkFafYMbYQ8vpZVESen22zc/NvePCun3REikpfv416Yb/TjNvPLEMGIiIq8GWBUIOca5kY2eQ60/YCQzH9LfnLJmvhM6ii0s+">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E3aQiWfyrxmnqixqhphqKUaZ9dxAIgU6IbRA1ovoLW0RVa5aA4BNR8D8AyLrHSMk67Em3EeJgRXqo9CWM6KlDDxJxbx+mAdoVc5HRzHw9Ymdw1g/+mbf4o0pMgY5OGaR">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
