--- a/4dec18.html
+++ b/4dec18.html
@@ -54,7 +54,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/screen-shot-2017-08-04-at-11.25.11-am-193x13222.png" alt="Mobirise" title="" style="height: 4.5rem;">
+                         <img src="assets/images/screen-shot-2017-08-04-at-11.25.11-am-193x13223.png" alt="Mobirise" title="" style="height: 4.5rem;">
                     </a>
                 </span>
                 
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-rbe9TM7uSQ mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=lQYNgLyxHug" id="header2-45">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-rbe9TM7uSQ mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=lQYNgLyxHug" id="header2-45">
 
     
 
