--- a/why-invest-in-omisego.html
+++ b/why-invest-in-omisego.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section once="" class="cid-qroapysk5Z" id="footer6-q">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section once="" class="cid-qroapysk5Z" id="footer6-q">
 
     
 
