create github pages

--- a/10dec18.html
+++ b/10dec18.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-rbNcMSn5O2 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=EQcnUEvyeEg" id="header2-7v">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="cid-rbNcMSn5O2 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=EQcnUEvyeEg" id="header2-7v">
 
     
 
@@ -90,6 +90,30 @@
         <a href="#next">
             <i class="mbri-down mbr-iconfont"></i>
         </a>
+    </div>
+</section>
+
+<section class="cid-rbNRRNJs22" id="content13-85">
+    
+    <div class="container">
+            <div class="media-container-row" style="width: 66%;">
+                <div class="img-item item1" style="width: 90%;">
+                    <img src="assets/images/duotone-26-500x333.jpg" alt="Congress Members Introduce Bills to Prevent Virtual Currency Price Manipulation" title="Congress Members Introduce Bills to Prevent Virtual Currency Price Manipulation">
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-7"><strong>
+                            Congress Members Introduce Bills to Prevent Virtual Currency Price Manipulation
+                        </strong></p>
+                    </div>
+                </div>
+                <div class="img-item">
+                    <img src="assets/images/duotone-27-478x265.jpg" alt="Stablecoin Issuer Promises Full Audits of Euro-Backed Crypto Token" title="Stablecoin Issuer Promises Full Audits of Euro-Backed Crypto Token">
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-7"><strong>
+                            Stablecoin Issuer Promises Full Audits of Euro-Backed Crypto Token
+                        </strong></p>
+                    </div>
+                </div>
+            </div>
     </div>
 </section>
 
