create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-qriPIOygdj mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=5-LyRjHlRgQ" id="header2-0">
 
     
 
@@ -78,7 +78,7 @@
     <div class="container align-center">
         <div class="media-container-column mbr-white col-md-10 offset-md-1">
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                <br>CryptoEase <span style="font-weight: normal;">The CryptoCurrency Lowdown</span></h1>
+                <br>CryptoEase <br><span style="font-weight: normal;">The CryptoCurrency Lowdown</span></h1>
             
             <p class="mbr-text pb-3 mbr-fonts-style display-5">A Daily Outline of All the Latest News from Bitcoin and Cryptocurrencies</p>
             <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="10dec18.html">TODAY STORIES</a> 
@@ -156,7 +156,7 @@
         <div class="media-container-column col-lg-8 offset-lg-2" data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for contacting us!</div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ufDCsaJM967hw6oeBURCmQ1C0lLQj1naKo8hNlgzagnwmdVP1p2AWYae2KyX0/ihxgAPvB8h1HPDfSjz76YK8cIOH5yiky9Tg13uJiRTyrIRWXo3hyHVTK8OEI4wUtEu">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ItNzzaiLzYM0TdvRrs8Drm9TpXbRN2f7/kwVO+P7DPq/vzpC8BiHpkJKs6BQr8tuqJiVK7nHYAeo0SaXbC1qfQK517GB4N4AwFenQtYJni++lNysc8H81bObcHT7OqE3">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
